Corrects zero margin for quotes on small devices

--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,13 @@
  * Updated in 2020.6.12
  */
 
+/* Missing.ink
+-------------------------------------------------- */
+ 
+ .html {
+  margin-left: 3px;
+ }
+
 /* Theme
 -------------------------------------------------- */
 :root {
